# toy-grpc-python

./: Makefile  README.md  pyproject.toml
protobuf/in/src/protobuf/: hello.proto
src/: client.py  protobuf  server.py
